--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
             <h1>Abel Tejada</h1>
             <ul id="navigation">
                 <li>
-                    <a href="#">About</a>
+                    <a href="../Basic-Portfolio/index.html">About</a>
                 </li>
                 <li>
-                    <a href="#">Portfolio</a>
+                    <a href="../Basic-Portfolio/portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="../Basic-Portfolio/contact.html">Contact</a>
                 </li>
             </ul>
         </header>
