--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <h1>Abel Tejada</h1>
             <ul id="navigation">
                 <li>
-                    <a href="../Basic-Portfolio/index.html">About</a>
+                    <a href="index.html">About</a>
                 </li>
                 <li>
-                    <a href="../Basic-Portfolio/portfolio.html">Portfolio</a>
+                    <a href="portfolio.html">Portfolio</a>
                 </li>
                 <li>
-                    <a href="../Basic-Portfolio/contact.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
