--- a/portfolio.html
+++ b/portfolio.html
@@ -35,21 +35,21 @@
             <div class="row">
                 <div class="column">
                     <div class="content">
-                        <img src="/Users/abeltejada/code/Basic-Portfolio/assets/images/download.jpeg" alt="Hangman"
+                        <img src="assets/images/download.jpeg" alt="Hangman"
                             style="width:100%">
                             <div class="centered">Hangman</div>
                         </div>
                 </div>
                 <div class="column">
                     <div class="content">
-                        <img src="/Users/abeltejada/code/Basic-Portfolio/assets/images/download (1).jpeg" alt="RPG Game"
+                        <img src="assets/images/download (1).jpeg" alt="RPG Game"
                             style="width:100%">
                             <div class="centered">RPG Game</div>
                         </div>
                 </div>
                 <div class="column">
                     <div class="content">
-                        <img src="/Users/abeltejada/code/Basic-Portfolio/assets/images/download (2).jpeg" alt="Trivia Game"
+                        <img src="assets/images/download (2).jpeg" alt="Trivia Game"
                             style="width:100%">
                         <div class="centered">Trivia Game</div>
 
@@ -57,7 +57,7 @@
                 </div>
                 <div class="column">
                     <div class="content">
-                        <img src="/Users/abeltejada/code/Basic-Portfolio/assets/images/download (3).jpeg" alt="Widget"
+                        <img src="assets/images/download (3).jpeg" alt="Widget"
                             style="width:100%">
                             <div class="centered">Rutgers Info Widget</div>
                         </div>
